 * Fixed the renewal process giving up every time on an already existing order
   with some invalid domains. Now, if such are seen in a previous order, a new
   order is created for a clean start over again. See #268.
 * Fixed a mixup in md-status handler when static certificate files and
   renewal was configured at the same time.

v2.4.7
----------------------------------------------------------------------------------------------------
 * When MDMessageCmd for a 'challenge-setup:<type>:<dnsname>' fails (!= 0 exit),
   the renewal process is aborted and an error is reported for the MDomain.
   As discussed in #237, this provides scripts that distribute information
   in a cluster to abort early with bothering an ACME server to validate
   a dns name that will not work. The common retry logic will make another
   attempt in the future, as with other failures.
 * Fixed a bug when adding private key specs to an already working MDomain, see #260.
 * fix time-of-use vs time-of-check when ACME server returned an empty response.
   [kokke <spam@rowdy.dk>]

v2.4.6
----------------------------------------------------------------------------------------------------
 * Fixed a bug in handling multiple parallel OCSP requests. These could run into
   an assertion which terminated (and restarted) the child process where the task
   was running. Eventually, all OCSP responses were collected, but not in the way
   that things are supposed to work.
   See also <https://bz.apache.org/bugzilla/show_bug.cgi?id=65567>.
   The bug was possibly triggered when more than one OCSP status needed updating
   at the same time. For example for several renewed certificates after a server
   reload.
   Added a test case to trigger this and verify correct behaviour.

v2.4.5
----------------------------------------------------------------------------------------------------
 * Certificate/keys pairs are verified as matching before a renewal is accepted