@@ -1,0 +1,22 @@
+-----BEGIN CERTIFICATE-----
+MIIDejCCAmKgAwIBAgIQfaNPgBFNflrkSu7M6HnZoTANBgkqhkiG9w0BAQsFADBX
+MQswCQYDVQQGEwJDQTELMAkGA1UECBMCT04xDzANBgNVBAcTBk90dGF3YTEQMA4G
+A1UEChMHT3B0b3ZpYTEYMBYGA1UEAxMPT3B0b3ZpYSBSb290IENBMB4XDTIxMDgy
+NzEyMzUxNloXDTMwMTIzMTIzNTk1OVowVzELMAkGA1UEBhMCQ0ExCzAJBgNVBAgT
+Ak9OMQ8wDQYDVQQHEwZPdHRhd2ExEDAOBgNVBAoTB09wdG92aWExGDAWBgNVBAMT
+D09wdG92aWEgUm9vdCBDQTCCASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEB
+ANN0W9COV5gViQS2XOxJw5+aiuZNk5byuVW+IJ06BpPArz5rlQdv78ze014Ogjwa
+KoGeSTdV2tmZpBajLVGlYHuMQUwzRwd8Z9qHk1HU8wPRo3seMesaYcE2y5KEpgcv
+9xFaszEXsFU67ZFBSshsp01/A088aBk4S+quQImwSy1Z5Gm8f+U7GvF9DPCqKhUc
+EUXSb8HEY70EAkeEMKsW0sNkcH9hXxVKBdmoB0j2tMnTdogoxP9JLiJxYOk2Y25v
+Ci9GzIYzyeiDa/K2nX4Ow2bpCPhR8Y4D8kxQcAC9fD5ZbFgcRitfL2+/OZhyq23J
+4PSAwOmvPWMwXxUuM7V0APUCAwEAAaNCMEAwDgYDVR0PAQH/BAQDAgGGMA8GA1Ud
+EwEB/wQFMAMBAf8wHQYDVR0OBBYEFMf2hZ3tBqCfzXRBZtAv/2lZQlaRMA0GCSqG
+SIb3DQEBCwUAA4IBAQAsNsj8myBHijCE2F4db9ggiwFE1v+aHmsWcou7dhWJK7J7
+SkzE78eCXZNt/Ftc7xzHBHu+IExGztXoLwqygGc7tWcHw9/8cgkHpAVa8kCiAVjn
+v+LrDwNiNm3JzMT+Q2HXEOZyFadqNxMuvBZI98h8ZzZDfYIgmyP/bYFTtt3FdFtb
+DQXq89rlrfBAIN+I0S8KidKXIgWBKC6oiBUrNg/1yHRjuS1+VL3j2jCo6XOco0BH
+lw4CR0f19XVblhXhP1yuzyp232z6SV96Gi2ZGZwMGu0cPGW3bj/o9MFW34LbJAXM
+Pg1c48PpmQbkA4YOhkI3ocDpF/3nkkeLdzb+p3x1
+-----END CERTIFICATE-----
+
